top level method rename ($import -> using)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>CLASS TEST</title>
 		<script type="application/javascript" src="./coremind.js"></script>
 		<script type="application/javascript">
-		cm.$import("cm.event.EventDispatcher");
+		cm.using("cm.event.EventDispatcher");
 		function main()
 		{
             var _a = new cm.data.Dictionary();
