--- a/test/Test_cm.motion.Scroll.html
+++ b/test/Test_cm.motion.Scroll.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script type="text/javascript" src="../manifest.js"></script>
     <script type="text/javascript" src="../coremind.js"></script>
     <style type="text/css" src="../html5reset-1.6.1.css"></style>
     <style type="text/css">
