--- a/test/Test_cm.display.Container.html
+++ b/test/Test_cm.display.Container.html
@@ -12,10 +12,10 @@
         var obj = new cm.display.Container();
         cm.log.d(obj);
         
-        cm.log.d("TEST[set fix property]");
+        cm.log.d("TEST[set abs property]");
         obj
-            .widthFix(10)
-            .heightFix(25)
+            .widthAbs(10)
+            .heightAbs(25)
             .setColor(0xFFFFFFFF, 1)
             .pushColor(0x80234567, 1)
             .setImage("./test.gif");
