--- a/test/Test_cm.display.Position.html
+++ b/test/Test_cm.display.Position.html
@@ -12,11 +12,11 @@
         var obj = new cm.display.Position();
         cm.log.d(obj);
         
-        cm.log.d("TEST[set fix property]");
+        cm.log.d("TEST[set Abs property]");
         obj
-            .xFix(10)
-            .yFix(25)
-            .zFix(79);
+            .xAbs(10)
+            .yAbs(25)
+            .zAbs(79);
         cm.log.d(obj);
         
         cm.log.d("TEST[dump isChanged]");
