--- a/test/Test_cm.display.Transform.html
+++ b/test/Test_cm.display.Transform.html
@@ -12,16 +12,16 @@
         var obj = new cm.display.Transform();
         cm.log.d(obj);
         
-        cm.log.d("TEST[set fix property]");
+        cm.log.d("TEST[set Abs property]");
         obj
-            .scaleXFix(1.2)
-            .scaleYFix(1.3)
-            .scaleZFix(1.4)
-            .rotationXFix(10)
-            .rotationYFix(20)
-            .rotationZFix(30)
-            .originXFix(100)
-            .originYFix(100);
+            .scaleXAbs(1.2)
+            .scaleYAbs(1.3)
+            .scaleZAbs(1.4)
+            .rotationXAbs(10)
+            .rotationYAbs(20)
+            .rotationZAbs(30)
+            .originXAbs(100)
+            .originYAbs(100);
         cm.log.d(obj);
         
         cm.log.d("TEST[dump isChanged]");
