--- a/test/Test_cm.display.impl.Drawable2DCss3Impl.html
+++ b/test/Test_cm.display.impl.Drawable2DCss3Impl.html
@@ -31,7 +31,7 @@
         var ids = [
             "testX", "testY", "testWidth", "testHieght", "testColor", "testImage", "testGradient"];
         var methods = [
-            "xRel", "yRel", "widthFix", "heightFix", "editBackgroundColor", "editBackgroundImage", "editBackgroundGradient"];
+            "xRel", "yRel", "widthAbs", "heightAbs", "editBackgroundColor", "editBackgroundImage", "editBackgroundGradient"];
         var values = [50, 50, 175, 450, 0xFF0000FF, "./0.gif"];
         
         for(var i = 0, len = ids.length; i < len; i ++)
@@ -69,7 +69,7 @@
                         .applyRound(100)
                         .setBottomLeftRound(30);
                     obj.cmDisplay.border
-                        .weightFix(5)
+                        .weightAbs(5)
                         .setStyle(cm.display.Border.DOT)
                         .editColor().setARGB(0x80FF0000);
                     obj.cmDisplay.background.editGradient()
